kubernetes/authentication.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  labels:
    app: authentication
spec:
  ports:
  - port: 8082
    targetPort: 8082
  selector:
    app: authentication
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-deployment
  labels:
    app: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
      - name: authentication
        image: calvarado2004/microservices-go-authentication:latest
        ports:
        - containerPort: 8082
