kubernetes/broker.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker-service
  labels:
    app: broker
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: broker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-deployment
  labels:
    app: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
      - name: broker
        image: calvarado2004/microservices-go-broker:latest
        ports:
        - containerPort: 8081
