kubernetes/listener.yaml
apiVersion: v1
kind: Service
metadata:
  name: listener-service
  labels:
    app: listener
spec:
  selector:
    app: listener
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listener-deployment
  labels:
    app: listener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listener
  template:
    metadata:
      labels:
        app: listener
    spec:
      containers:
      - name: listener
        image: calvarado2004/microservices-go-listener:latest
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
            cpu: 100m
            memory: 100Mi
