kubernetes/logging.yaml
apiVersion: v1
kind: Service
metadata:
  name: logger-service
  labels:
    app: logger
spec:
  ports:
  - port: 8083
    targetPort: 8083
    name: "web"
  - port: 5001
    targetPort: 5001
    name: "rpc"
  - port: 50001
    targetPort: 50001
    name: "grpc"
  selector:
    app: logger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-deployment
  labels:
    app: logger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      containers:
      - name: logger
        image: calvarado2004/microservices-go-logging:latest
        ports:
        - containerPort: 8083
          name: "web"
        - containerPort: 5001
          name: "rpc"
        - containerPort: 50001
          name: "grpc"
