kubernetes/mailer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailer-service
  labels:
    app: mailer
spec:
  selector:
    app: mailer
  ports:
  - port: 8084
    targetPort: 8084
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailer-deployment
  labels:
    app: mailer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailer
  template:
    metadata:
      labels:
        app: mailer
    spec:
      containers:
      - name: mailer
        image: calvarado2004/microservices-go-mailer:latest
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          exec:
            command:
              - sh
              - -ec
              - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8084/ping || exit 1'
          initialDelaySeconds: 7
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
              - sh
              - -ec
              - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8084/ping || exit 1'
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        ports:
        - containerPort: 8084
          name: "web"
