kubernetes/mailhog.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog-service
  labels:
    app: mailhog
spec:
  ports:
  - port: 8025
    targetPort: 8025
    name: "web"
  - port: 1025
    targetPort: 1025
    name: "service"
  selector:
    app: mailhog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog-deployment
  labels:
    app: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
      - name: mailhog
        image: mailhog/mailhog:latest
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          exec:
            command:
              - sh
              - -ec
              - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8025 || exit 1'
          initialDelaySeconds: 7
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
              - sh
              - -ec
              - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8025 || exit 1'
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        ports:
        - containerPort: 8025
          name: "web"
        - containerPort: 1025
          name: "service"
