kubernetes/postgres-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres 
  serviceName: "postgres"
  replicas: 1
  minReadySeconds: 15
  template:
    metadata:
      labels:
        app: postgres 
    spec:
      terminationGracePeriodSeconds: 20
      containers:
      - name: postgres
        image: postgres:14.0
        resources:
          requests:
            cpu: 10m
            memory: 30Mi
          limits:
            cpu: 200m
            memory: 256Mi
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "portworx-db-sc"
      resources:
        requests:
          storage: 5Gi
