kubernetes/rabbitmq-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  ports:
  - port: 5672
    protocol: TCP
    name: rabbitmq
  - port: 15672
    protocol: TCP
    name: rabbitmq-mgmt
  selector:
    app: rabbitmq
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq 
  serviceName: "rabbitmq"
  replicas: 1
  minReadySeconds: 15
  template:
    metadata:
      labels:
        app: rabbitmq 
    spec:
      terminationGracePeriodSeconds: 20
      containers:
      - name: rabbitmq
        image: rabbitmq:3.9-management-alpine
        resources:
          requests:
            cpu: 200m
            memory: 60Mi
          limits:
            cpu: 400m
            memory: 256Mi
        ports:
        - containerPort: 5672
          protocol: TCP
          name: rabbitmq
        - containerPort: 15672
          protocol: TCP
          name: rabbitmq-mgmt
        volumeMounts:
        - name: rabbitmq-data
          mountPath: /var/lib/rabbitmq
  volumeClaimTemplates:
  - metadata:
      name: rabbitmq-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "portworx-db-sc"
      resources:
        requests:
          storage: 5Gi
