kubernetes/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: k8s-asus.calvarado04.com
      http:
        paths:
          - path: /microservices
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
          - path: /microservices/broker
            pathType: Prefix
            backend:
              service:
                name: broker-service
                port:
                  number: 8081
          - path: /microservices/broker(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: broker-service
                port: 
                  number: 8081
